# libeltako

./: .gitignore  Makefile.am  README  README.md  configure.ac  libeltako.pc.in
include/: Makefile.am
include/libeltako/: Makefile.am  button.h  dimmer.h  frame.h  frame_receiver.h  message.h  serial.h
src/: Makefile.am  button.c  dimmer.c  frame.c  frame_receiver.c  message.c  serial.c
tests/: Makefile.am
tools/: Makefile.am  config.c  config.h  dump.c  eltakod.c  eltakod.conf  send.c
